[package]
name = "fido-mds"
version = "0.1.0"
edition = "2021"
authors = ["Marcin Czerwonka <marcin.czerwonka@protonmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["rustls-tls", "blocking"] }
base64 = { version = "0.21", features = [] }
serde = { version = "1.0.192", features = ["derive", "std"] }
serde_json = { version = "1.0.108", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }