[package]
name = "fido-metadata-service"
version = "0.1.0"
edition = "2021"
authors = ["Marcin Czerwonka <marcin.czerwonka@protonmail.com>"]
license = "MIT"

[[example]]
name = "pull_most_recent"
required-features = ["download", "blocking"]

[[example]]
name = "pull_most_recent_async"
required-features = ["download"]

[dependencies]
reqwest = { version = "0.11", optional = true, features = [] }
base64 = { version = "0.21", features = [] }
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = { version = "1.0", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.34", features = [] }

[features]
default = ["download", "rustls-tls"]
download = ["dep:reqwest"]
blocking = ["download", "reqwest/blocking"]
rustls-tls = ["download", "reqwest/rustls-tls"]
native-tls = ["download", "reqwest/native-tls"]
